Make footer align to page bottom and fix background css.

--- a/styles/classlist.css
+++ b/styles/classlist.css
@@ -9,7 +9,7 @@
 
 .card-body {
   display: grid;
-  border-radius: 1em;
+  border-radius: 0.5em;
   grid-template-columns: 70% 30%;
   grid-template-rows: auto;
   background-color: #735353;
@@ -31,12 +31,13 @@
   color: white;
   /* margin: auto; */
 }
-
+html {
+  height: 100%;
+}
 body {
+  min-height: 100%;
   display: grid;
   grid-template-rows: 15% 100% 15%;
-  background-image: linear-gradient(to bottom right, rgb(100, 47, 47) , rgb(71, 59, 81), rgb(71, 59, 81));
-  
 }
 
 .gridNavbar {
@@ -46,13 +47,10 @@ body {
   
 }
 
-
-
 .gridContent {
-  
+  background-image: linear-gradient(to bottom right, rgb(100, 47, 47) , rgb(71, 59, 81), rgb(71, 59, 81));
   justify-content: center;
   display: grid;
-  
 }
 
 .join {
